[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tweetxvault"
version = "0.1.0"
description = "Export X bookmarks and likes into a local archive."
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "loguru>=0.7,<1",
  "pydantic>=2,<3",
  "pyseekdb",
  "rich>=13,<14",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.11,<0.12",
]

[project.scripts]
tweetxvault = "tweetxvault.cli:app"

[tool.uv]
dev-dependencies = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.11,<0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
