[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tweetxvault"
version = "0.2.1"
description = "Archive X bookmarks, likes, authored tweets, and official X exports locally."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
keywords = ["archive", "bookmarks", "cli", "twitter", "x"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "browser-cookie3>=0.20,<1",
  "httpx>=0.27,<1",
  "lancedb>=0.29,<1",
  "numpy>=1.26,<3",
  "loguru>=0.7,<1",
  "pydantic>=2,<3",
  "pyarrow>=20,<23",
  "rich>=13,<14",
  "tqdm>=4.66,<5",
  "typer>=0.12,<1",
  "platformdirs>=4.9.4",
]

[project.optional-dependencies]
embed = [
  "huggingface-hub>=0.25,<1",
  "onnxruntime>=1.19,<2",
  "tokenizers>=0.21,<1",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.11,<0.12",
]

[project.scripts]
tweetxvault = "tweetxvault.cli:app"

[project.urls]
Homepage = "https://github.com/lhl/tweetxvault"
Repository = "https://github.com/lhl/tweetxvault"
Issues = "https://github.com/lhl/tweetxvault/issues"
Changelog = "https://github.com/lhl/tweetxvault/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["tweetxvault"]

[tool.hatch.build.targets.sdist]
include = [
  "/tweetxvault",
  "/CHANGELOG.md",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]
exclude = [
  "/.gitignore",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.11,<0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["ASYNC", "B", "E", "F", "I", "RUF", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
